4 deploy with jenkins